--- a/src/index.css
+++ b/src/index.css
@@ -283,6 +283,7 @@
   /* Handwritten font */
   .handwritten {
     font-family: 'Permanent Marker', cursive;
+    /* color: #4b2e2e; */
   }
 
   /* Typewriter font */
